- footer events.html commented - index.html redirects properly on localhost - stars position amended

--- a/src/html/delete.html
+++ b/src/html/delete.html
@@ -42,7 +42,7 @@
                                 alt="profile icon"
                             />
                         </a>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img
                                 src="../media/images/icons/logout_icon.png"
                                 alt="log out icon"
@@ -68,7 +68,7 @@
                 <p class="delete_size">All your personal information will be deleted </p>
             </article>
             <article>
-                <a href="index.html"><h3 class="delete_profile_anyway">DELETE ANYWAY</h3></a>
+                <a href="../index.html"><h3 class="delete_profile_anyway">DELETE ANYWAY</h3></a>
             </article>
             <article>
                 <a href="profile.html"><h3 class="delete_cancel">CANCEL</h3></a>
