--- a/src/html/privacy.html
+++ b/src/html/privacy.html
@@ -42,7 +42,7 @@
                             alt="profile icon"
                         />
                     </a>
-                    <a href="index.html">
+                    <a href="../index.html">
                         <img
                             src="../media/images/icons/logout_icon.png"
                             alt="log out icon"
