--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -43,7 +43,7 @@
                                 alt="profile icon"
                             />
                         </a>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img
                                 src="../media/images/icons/logout_icon.png"
                                 alt="log out icon"
@@ -65,7 +65,7 @@
                         <img class="profile_round" src="../media/images/profileImg.jpg" alt="Profile Icon">
                     </div>
                     <div class="div_inline">
-                        <a href="index.html"><h3 class="logout_profile">LOG OUT</h3></a>
+                        <a href="../index.html"><h3 class="logout_profile">LOG OUT</h3></a>
                     </div>
                 </div>
                 <div class="flex_profile_info">
