--- a/src/html/events.html
+++ b/src/html/events.html
@@ -46,7 +46,7 @@
                                 alt="profile icon"
                             />
                         </a>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img
                                 src="../media/images/icons/logout_icon.png"
                                 alt="log out icon"
@@ -188,10 +188,13 @@
     </main>
     <!--Standard OpenEvents' website footer with legal information-->
     <footer class="flex_footer">
+        <!--Section which places in two rows the links to legal information-->
         <section class="inlineNav">
+            <!--Div which places OpenEvents title-->
             <div>
                 <h4 class="white">OpenEvents</h4>
             </div>
+            <!--Div which gathers the two links to legal information-->
             <div>
                 <nav>
                     <div><a href="./terms.html"><h5 class="white">Terms of use</h5></a></div>
@@ -199,6 +202,7 @@
                 </nav>
             </div>
         </section>
+        <!--Div which places on a second row the legal label about OpenEvents-->
         <div>
             <h5 class="white">© 1996-2022 OpenEvents.com, Inc. or its affiliates</h5>
         </div>
