filters link update

--- a/src/html/events.html
+++ b/src/html/events.html
@@ -112,7 +112,7 @@
                     </div>
                     <!--Div that allows deleting the filters on desktop events' web page -->
                     <div class="filters_desktop delete_filters">
-                        <a href="./filter_events.html">Delete filters</a>
+                        <a href="./events.html">Delete filters</a>
                     </div>
                 </div>
                 <!--Div that displays the possibility of creating a new event -->
